--- a/paper/references.bib
+++ b/paper/references.bib
@@ -319,3 +319,23 @@
     month={Dec}, 
     pages={42–49}
   } 
+  
+@Manual{ggpmisc,
+    title = {ggpmisc: Miscellaneous Extensions to 'ggplot2'},
+    author = {Pedro J. Aphalo},
+    year = {2023},
+    note = {R package version 0.5.5},
+    url = {https://CRAN.R-project.org/package=ggpmisc},
+  }
+  
+@article{Merone_Tsey_Russell_Nagle_2022, 
+    title={Sex inequalities in medical research: A systematic scoping review of the literature}, 
+    volume={3}, 
+    DOI={10.1089/whr.2021.0083}, 
+    number={1}, 
+    journal={Women’s Health Reports}, 
+    author={Merone, Lea and Tsey, Komla and Russell, Darren and Nagle, Cate}, 
+    year={2022}, 
+    month={Jan}, 
+    pages={49–59}
+  } 
